@@ -81,6 +81,7 @@ SCOREP_Instrumenter::SCOREP_Instrumenter( SCOREP_Instrumenter_InstallData& insta
     m_preprocess_adapter = new SCOREP_Instrumenter_PreprocessAdapter();
     m_pdt_adapter        = new SCOREP_Instrumenter_PdtAdapter();
     m_user_adapter       = new SCOREP_Instrumenter_UserAdapter();
+    m_pthread_adapter    = new SCOREP_Instrumenter_PthreadAdapter();
     new SCOREP_Instrumenter_OnlineAccess();
 
     /* pre-compile adapter order */
