@@ -44,6 +44,7 @@ typedef enum
     SCOREP_INSTRUMENTER_ADAPTER_PDT,
     SCOREP_INSTRUMENTER_ADAPTER_PREPROCESS,
     SCOREP_INSTRUMENTER_ADAPTER_USER,
+    SCOREP_INSTRUMENTER_ADAPTER_PTHREAD,
 
     /* Should stay last element in enum */
     SCOREP_INSTRUMENTER_ADAPTER_NUM
