@@ -193,6 +193,7 @@ SCOREP_Instrumenter_Pthread::SCOREP_Instrumenter_Pthread(
     m_pthread_cflag( SCOREP_BACKEND_PTHREAD_CFLAGS ),
     m_pthread_lib( SCOREP_BACKEND_PTHREAD_LIBS )
 {
+    m_requires.push_back( SCOREP_INSTRUMENTER_ADAPTER_PTHREAD );
     m_conflicts.push_back( SCOREP_INSTRUMENTER_ADAPTER_OPARI );
 #if !SCOREP_BACKEND_HAVE_PTHREAD
     unsupported();
@@ -235,6 +236,26 @@ SCOREP_Instrumenter_Pthread::setConfigValue( const std::string& key,
     {
         m_pthread_cflag = value;
     }
+}
+
+/* **************************************************************************************
+ *  * class SCOREP_Instrumenter_PthreadAdapter
+ *   * *************************************************************************************/
+SCOREP_Instrumenter_PthreadAdapter::SCOREP_Instrumenter_PthreadAdapter( void )
+    : SCOREP_Instrumenter_Adapter( SCOREP_INSTRUMENTER_ADAPTER_PTHREAD, "pthread" )
+{
+}
+
+void
+SCOREP_Instrumenter_PthreadAdapter::printHelp( void )
+{
+    return;
+}
+
+std::string
+SCOREP_Instrumenter_PthreadAdapter::getConfigToolFlag( void )
+{
+    return "";
 }
 
 /* **************************************************************************************
